sumo/tests/jtrrouter/errors/network/edge/root__edge#to__ungiven1/errors.jtrrouter
Error: Attribute 'to' is missing in definition of edge '1'.
Error: An unknown edge occured (id='1').
Quitting (on error).
